RESOLVED FIXED26009
REGRESSION (r43973): Problems While Working With OpenVanilla
https://bugs.webkit.org/show_bug.cgi?id=26009
Summary REGRESSION (r43973): Problems While Working With OpenVanilla
shawn
Reported 2009-05-25 07:07:16 PDT
When input with openarry (array module in openvanilla) in a text input form such like the search field on Google, it ignores the first input key, actually, the second key replace the first key. It doest not occur in Safari 4 Beta.
Attachments
proposed fix (1.75 KB, patch)
2009-05-27 10:10 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2009-05-27 05:01:30 PDT
This was hopefully fixed in <http://trac.webkit.org/projects/webkit/changeset/44164>. Please test again with the latest nightly build.
shawn
Comment 2 2009-05-27 08:01:14 PDT
It still does not work. Please check it one more time. Here is the link of the IM OpenVanilla: http://code.google.com/p/openvanilla/ My situation is, the first key input in the field would be replaced by the second key.
shawn
Comment 3 2009-05-27 08:08:00 PDT
Excuse me, it sometimes work in the new build, but not always work.
Alexey Proskuryakov
Comment 4 2009-05-27 08:33:06 PDT
Hmm, I think I get it now, looks like a completely unrelated issue. Please confirm that this is the problem: 1) Switch to OpenVanilla Array input method. 2) Type 'q', then '1'. Results: Instead of an ideogram, '1' is inserted.
Alexey Proskuryakov
Comment 5 2009-05-27 08:37:00 PDT
> looks like a completely unrelated issue. or maybe not that unrelated - in console log, I see unexpected messages from OpenVanilla about changing input server.
shawn
Comment 6 2009-05-27 08:38:40 PDT
Yes, '1' is inserted instead of an ideogram.
Alexey Proskuryakov
Comment 7 2009-05-27 09:51:33 PDT
the problem here is that when a character is typed, WebCore temporarily sets selection to none, so we tell input methods that the input context is nil.
Alexey Proskuryakov
Comment 8 2009-05-27 09:52:14 PDT
Alexey Proskuryakov
Comment 9 2009-05-27 10:10:43 PDT
Created attachment 30711 [details] proposed fix
Darin Adler
Comment 10 2009-05-27 10:58:02 PDT
Comment on attachment 30711 [details] proposed fix r=me
Alexey Proskuryakov
Comment 11 2009-05-27 11:02:19 PDT
Alexey Proskuryakov
Comment 12 2009-06-22 11:36:54 PDT
Please verify that OpenVanilla works with current nightly builds (newer than r44941) - we've had many changes in this area after fixing this bug.
shawn
Comment 13 2009-06-26 10:44:58 PDT
It works correctly in r45247
Note You need to log in before you can comment on or make changes to this bug.