        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=26009
        <rdar://problem/6925656> REGRESSION (r43973): Problems While Working With OpenVanilla

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _updateSelectionForInputManager]): Don't call updateWindows if the selection
        is None. This routinely happens during editing, and it doesn't mean that we left an editable
        area (in which case the selection changes to a non-editable one).



Canonical link: https://commits.webkit.org/36052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44194 268f45cc-cd09-0410-ab3c-d52691b4dbfc